2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Middle-end fixes in `spr'.

	* tools/lib/slc/lower/seq.py: Fix flattening of argument types for
	`create'.
	
	* tools/lib/slc/lower/split.py: Handle flattening of naked
	`create' constructs to a function named by identifier. Remove
	special behavior for `t_main', since it confuses things. Expose
	split descriptor as array[2] instead of pointer-to-descriptor.

2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor whitespace fixes.

	* tools/lib/slc/input/cm4.py: Tolerate more combinations of quotes
	and strings.

	* tools/lib/slc/input/parse.py: Strip all whitespace (also `\n')
	from identifiers before use.

2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Implement support for thread function pointers.

	* tools/lib/t-utc/slimpl.m4,
	* tools/lib/t-utc0/slimpl.m4,
	* tools/lib/t-ptl/slimpl.m4,
	* tools/lib/t-sppalpha/slimpl.m4,
	* tools/lib/t-seqc/slimpl.m4,
	* tools/lib/t-spr/slimpl.m4: New syntax `sl_decl_fptr' and
	`sl_typedef_fptr'.

	* tools/lib/slc/ast.py,
	* tools/lib/slc/input/parse.py,
	* tools/lib/slc/visitors.py,
	* tools/lib/slc/lower/split.py,
	* tools/lib/slc/lower/seq.py,
	* tools/lib/slc/mtalpha/visitors.py: Parse and convert function
	pointer declarations.

2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Also check `spr+seq-mtalpha-sim' in tests.

	* build-aux/slctests.mk (EXTRA_TEST_IMPL): Add the new target.

2010-05-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Sanitize handling of `main' and `t_main'.

	Until this point `main' was reserved and a SL program did not have
	access to argc/argv. This changeset resolves the issue and opens
	`main' for public use again.

	* tools/lib/host-host-seqc/load.c: Move to...

	* tools/lib/load.c: ...here. Get file names from environment
	variables, not `argv'. Define as initializer to the linker, to
	avoid requiring a custom `main'.

	* tools/lib/r-host.sh.in: Provide files in env var, instead of
	command line.
