@@ -1,5 +1,14 @@
 2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Portability workaround with old `ptl' semantics.
+
+	* tools/lib/t-ptl/slimpl.m4: Ignore the 6th `create' field
+	entirely when provided, since it may now contain attributes etc,
+	which are not supported in this implementation. Drop support for
+	an argument to `sl_break'.
+
+2010-05-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Middle-end fixes in `spr'.
 
 	* tools/lib/slc/lower/seq.py: Fix flattening of argument types for
